--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
        
         <div>     <!-- div for experience -->
             <h3>WORK EXPERIENCE</h3><hr>
-            <p>role 1</h4>
+            <h4>role 1</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima labore tenetur enim, ipsam corrupti rem dolorem veniam iure, eaque consequuntur similique ratione est nobis nam? Quam aperiam in qui sapiente.</p>
             <h4>role 2</h4>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus distinctio fuga fugit officiis impedit, ab molestiae deleniti harum pariatur laboriosam! Quibusdam, alias modi. Dolores odit sapiente quod ut rerum autem.</p>
