--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             Baramulla, J&K</p>
     </div>
     <div class="languages">
-            <h3>LANGUAGES <i class="fa-solid fa-language"></i></h3>
+            <h3>LANGUAGES <i class="fa-solid fa-language"></i></h3> <hr>
             <p>English, Urdu, Hindi , Kashmiri</p>
     </div>
     </section>
