--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resume</title>
+    <title>SHARIK MAYASER</title>
     <link rel="stylesheet" href="resume.css">
     <script src="https://kit.fontawesome.com/d4578b602c.js" crossorigin="anonymous"></script>
 </head>
