--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SHARIK MAYASER</title>
     <link rel="stylesheet" href="resume.css">
+    <link rel="shortcut icon" href="images/icons8-cv-64.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/d4578b602c.js" crossorigin="anonymous"></script>
 </head>
 <body>
